# hw1

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pytest.ini  setup.cfg
.github/workflows/: main.yml  pull_request.yml
requirements/: dev.txt  test.txt
src/hw1/: import_monster.py
tests/: test_import_monster.py
tests/test_modules/: module_1.py
