[metadata]
name = hw1
version = attr: hw1.__version__
license = MIT
license_file = LICENSE
url = https://github.com/amanit/hw1
author = Serge Fedoruk
author_email = fedoruksb@gmail.com
description = Homework 1
long_description = file: README.md

[options]
zip_safe = False
package_dir =
    =src
packages = find:

python_requires = >=3.7

[options.packages.find]
where = src
